aks-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
  namespace: custom-ingress
spec:
  type: ClusterIP
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
  namespace: custom-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api-container
        image: generator.azurecr.io/api:v0.1.1
        ports:
        - containerPort: 8000
